增加打包命令

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "chelin",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build:dev": "webpack"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -13,6 +16,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/runtime": "^7.9.2",
     "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
